examples/test/testpolicy12545.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy12545
  namespace: namespace195
spec:
  podSelector:
    matchLabels:
      key13: value47
      key3: value45
      key15: value36
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key14: value48
      podSelector:
        matchLabels:
          key12: value44
          key48: value32
          key38: value6
